--- a/user-more-detail.html
+++ b/user-more-detail.html
@@ -726,7 +726,7 @@
           <!-- Content -->
 
 
-          <div class="container-xxl flex-grow-1 container-p-y">
+          <div class="container-xxl flex-grow-1 ">
             <div class="row">
               <div class="col-12">
                 <div class="card mb-4">
@@ -760,119 +760,61 @@
               </div>
             </div>
 
-            <div class="col-lg-8">
 
-              <!-- User Pills -->
-              <ul class="nav nav-pills flex-column flex-md-row">
-                <li class="nav-item"><a class="nav-link" href="app-user-view-account.html"><i
-                      class="bx bx-user me-1"></i>Profile</a></li>
-                <li class="nav-item"><a class="nav-link " href="app-user-view-security.html"><i
-                      class="bx bx-lock-alt me-1"></i>Attendance</a></li>
-                <li class="nav-item"><a class="nav-link" href="app-user-view-billing.html"><i
-                      class="bx bx-detail me-1"></i>Fees</a></li>
-                <li class="nav-item"><a class="nav-link active" href="javascript:void(0);"><i
-                      class="bx bx-bell me-1"></i>Exam</a></li>
-              </ul>
-              <!--/ User Pills -->
-            </div>
           </div>
 
-          <div class="container-xxl flex-grow-1 container-p-y">
+          <div class="container-xxl flex-grow-1">
             <div class="card">
-
-              <h5 class="card-header">Exam</h5>
-
-              <div class="table-responsive text-nowrap  table_higth">
-                <table class="table table-hover text-center">
-                  <thead class="table_body table_body">
-                    <tr>
-                      <th>#</th>
-                      <th>Exam Name</th>
-                      <th>Date</th>
-                      <th>Day</th>
-                      <th>Total Marks</th>
-                      <th>Student Marks</th>
-                      <!-- <th>Address</th>
-                      <th>Region</th>
-                      <th>Actions</th> -->
-                    </tr>
-                  </thead>
-                  <tbody class="table-border-bottom-0">
-                    <tr>
-                      <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
-                      <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
-                    </tr>
-                    <tr>
-                      <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
-                      <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
-                    </tr>
-                    <tr>
-                      <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
-                      <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
-                    </tr>
-                    <tr>
-                      <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
-                      <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
-                    </tr>
-                    <tr>
-                      <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
-                      <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
-                    </tr>
-                    <tr>
-                      <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
-                      <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
-                    </tr>
-                    <tr>
-                      <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
-                      <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
-                    </tr>
-                    <tr>
-                      <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
-                      <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
-                    </tr>
-                    <tr>
-                      <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
-                      <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
-                    </tr>
-
-                  </tbody>
-                </table>
+              <div class="container">
+                <h5 class="pb-2 border-bottom my-4">Details</h5>
+                <div class="row">
+                  <div class="col-lg-6">
+                    <div class="info-container">
+                      <ul class="list-unstyled">
+                        <li class="mb-3">
+                          <span class="fw-bold me-2">Institute ID:</span>
+                          <span>2671727</span>
+                        </li>
+                        <li class="mb-3">
+                          <span class="fw-bold me-2">User Name:</span>
+                          <span>Admin</span>
+                        </li>
+                        <li class="mb-3">
+                          <span class="fw-bold me-2">Email:</span>
+                          <span>Abc@gmail.com</span>
+                        </li>
+                        <li class="mb-3">
+                          <span class="fw-bold me-2">Number:</span>
+                          <span>(+92)3246739928</span>
+                        </li>
+                        <li class="mb-3">
+                          <span class="fw-bold me-2">User Role:</span>
+                          <span>Management</span>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="info-container">
+                      <ul class="list-unstyled">
+                        <li class="mb-3">
+                          <span class="fw-bold me-2">Institute Name:</span>
+                          <span>The Hunar Foundation</span>
+                        </li>
+                        <li class="mb-3">
+                          <span class="fw-bold me-2">Institute Email:</span>
+                          <span>ABC@gmail.com</span>
+                        </li>
+                        <li class="mb-3">
+                          <span class="fw-bold me-2">Institute Phone No:</span>
+                          <span>(+92)3245634789</span>
+                        </li>
+                        
+                      
+                      </ul>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
