--- a/attendance_add.html
+++ b/attendance_add.html
@@ -773,45 +773,206 @@
                 <div class="content-wrapper">
                     <!-- Content -->
                     <div class="container-xxl flex-grow-1 container-p-y">
+                        <div class="card mb-3 p-3">
+                            <div class="row ">
+                                <div class="col-lg-3 pt-3">
+                                    <select name="" id="" class="form-control">
+                                        <option value="1">All Institute</option>
+                                        <option value="1">Institute</option>
+                                        <option value="1">Institute</option>
+                                    </select>
+                                </div>
+                                <div class="col-lg-3 pt-3">
+                                    <select name="" id="" class="form-control">
+                                        <option value="1">Shift Select</option>
+                                        <option value="1">Shift</option>
+                                        <option value="1">Shift</option>
+                                    </select>
+                                </div>
+                                <div class="col-lg-3 pt-3">
+                                    <select name="" id="" class="form-control">
+                                        <option value="1">Trade Select</option>
+                                        <option value="1">Trade</option>
+                                        <option value="1">Trade</option>
+                                    </select>
+                                </div>
+                                <div class="col-lg-3 pt-3">
+                                    <input type="date" class="form-control">
+                                </div>
+                                <div class="col-lg-12 pt-3">
+                                    <button type="submit" class="btn btn-primary">Search</button>
+                                </div>
+                            </div>
+                        </div>
                         <div class="card">
-                            <h5 class="card-header">All Institute</h5>
+                            <h5 class="card-header">Student List</h5>
+                            <div class="row mb-3 px-3 d-flex align-items-center">
+                                <div class="col-lg-9">
+                                    <span class="p-2">Set attendance for all students as</span>
+                                    <label for="" class="px-1">
+                                        <input type="radio" name="name" id="" class="form-check-input ">
+                                        Presents
+                                    </label>
+                                    <label for=""class="px-1">
+                                        <input type="radio" name="name" id="" class="form-check-input ">
+                                        Absents
+                                    </label>
+                                    <label for=""class="px-1">
+                                        <input type="radio" name="name" id="" class="form-check-input ">
+                                        Leaves
+                                    </label>
+                                </div>
+
+                                <div class="col-lg-3 text-end">
+                                    <button type="submit" class="btn btn-primary">Save</button>
+                                </div>
+                            </div>
                             <div class="table-responsive text-nowrap  table_higth">
-                                <table class="table table-hover">
+                                <table class="table table-hover text-center">
                                     <thead class="table_body table_body">
                                         <tr>
                                             <th>#</th>
                                             <th>ID</th>
                                             <th>name</th>
-                                            <th>Address</th>
-                                            <th>Region</th>
-                                            <th>Actions</th>
+                                            <th>Presents</th>
+                                            <th>Absents</th>
+                                            <th>Leaves</th>
+                                            <th>Note</th>
                                         </tr>
                                     </thead>
                                     <tbody class="table-border-bottom-0">
                                         <tr>
                                             <td></i> <strong>1</strong></td>
-                                            
+
                                             <td><span class=" me-1">000333</span></td>
                                             <td>Muhammad Afzal</td>
-                                            <td><span class=" me-1">karachi Pakistan</span></td>
-                                            <td><span class=" me-1">Nort </span></td>
                                             <td>
-                                                <div>
-                                                    <a href="#">
-                                                        <span><i
-                                                                class="fs-5 las la-eye bg-success text-white p-1 rounded-2"></i></span>
-                                                    </a>
-
-                                                    <a href="#">
-                                                        <span><i
-                                                                class="fs-5 las la-pen bg-primary text-white p-1 rounded-2 "></i></span>
-                                                    </a>
-                                                    <a href="#">
-                                                        <span><i
-                                                                class="fs-5 las la-trash-alt bg-danger text-white p-1 rounded-2"></i></span>
-                                                    </a>
-                                                </div>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
                                             </td>
+                                            <td>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
+                                            </td>
+                                            <td>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
+                                            </td>
+                                            <td>
+                                                <input type="text" class="form-control">
+                                            </td>
+
+                                        </tr>
+                                        <tr>
+                                            <td></i> <strong>1</strong></td>
+
+                                            <td><span class=" me-1">000333</span></td>
+                                            <td>Muhammad Afzal</td>
+                                            <td>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
+                                            </td>
+                                            <td>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
+                                            </td>
+                                            <td>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
+                                            </td>
+                                            <td>
+                                                <input type="text" class="form-control">
+                                            </td>
+
+                                        </tr>
+                                        <tr>
+                                            <td></i> <strong>1</strong></td>
+
+                                            <td><span class=" me-1">000333</span></td>
+                                            <td>Muhammad Afzal</td>
+                                            <td>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
+                                            </td>
+                                            <td>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
+                                            </td>
+                                            <td>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
+                                            </td>
+                                            <td>
+                                                <input type="text" class="form-control">
+                                            </td>
+
+                                        </tr>
+                                        <tr>
+                                            <td></i> <strong>1</strong></td>
+
+                                            <td><span class=" me-1">000333</span></td>
+                                            <td>Muhammad Afzal</td>
+                                            <td>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
+                                            </td>
+                                            <td>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
+                                            </td>
+                                            <td>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
+                                            </td>
+                                            <td>
+                                                <input type="text" class="form-control">
+                                            </td>
+
+                                        </tr>
+                                        <tr>
+                                            <td></i> <strong>1</strong></td>
+
+                                            <td><span class=" me-1">000333</span></td>
+                                            <td>Muhammad Afzal</td>
+                                            <td>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
+                                            </td>
+                                            <td>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
+                                            </td>
+                                            <td>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
+                                            </td>
+                                            <td>
+                                                <input type="text" class="form-control">
+                                            </td>
+
+                                        </tr>
+                                        <tr>
+                                            <td></i> <strong>1</strong></td>
+
+                                            <td><span class=" me-1">000333</span></td>
+                                            <td>Muhammad Afzal</td>
+                                            <td>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
+                                            </td>
+                                            <td>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
+                                            </td>
+                                            <td>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
+                                            </td>
+                                            <td>
+                                                <input type="text" class="form-control">
+                                            </td>
+
+                                        </tr>
+                                        <tr>
+                                            <td></i> <strong>1</strong></td>
+
+                                            <td><span class=" me-1">000333</span></td>
+                                            <td>Muhammad Afzal</td>
+                                            <td>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
+                                            </td>
+                                            <td>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
+                                            </td>
+                                            <td>
+                                                <input type="radio" name="name" id="" class="form-check-input ">
+                                            </td>
+                                            <td>
+                                                <input type="text" class="form-control">
+                                            </td>
+
                                         </tr>
                                     </tbody>
                                 </table>
