--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="All_institue.html" class="menu-link">
+                <a href="all_institue.html" class="menu-link">
                   <div data-i18n="All Institute">All Institute</div>
                 </a>
               </li>
@@ -205,12 +205,12 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="trade_add.html" class="menu-link">
                   <div data-i18n="Courses Add">Courses Add</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="all_Trade.html" class="menu-link">
                   <div data-i18n="Courses Details">Courses Details</div>
                 </a>
               </li>
@@ -246,12 +246,12 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="student_add.html" class="menu-link">
                   <div data-i18n="Student Addmission">Student Addmission</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="all_student.html" class="menu-link">
                   <div data-i18n="Student Details">Student Details</div>
                 </a>
               </li>
@@ -270,12 +270,12 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="attendance_add.html" class="menu-link">
                   <div data-i18n="Attendance Add">Attendance Add</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="attendance_details.html" class="menu-link">
                   <div data-i18n="Attendance Details">Attendance Details</div>
                 </a>
               </li>
@@ -308,12 +308,12 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="user-add.html" class="menu-link">
                   <div data-i18n="User Add">User Add</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="user_detail.html" class="menu-link">
                   <div data-i18n="User Details">User Details</div>
                 </a>
               </li>
