--- a/std_attendance.html
+++ b/std_attendance.html
@@ -109,7 +109,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="All_institue.html" class="menu-link">
+                <a href="all_institue.html" class="menu-link">
                   <div data-i18n="All Institute">All Institute</div>
                 </a>
               </li>
@@ -130,12 +130,12 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="trade_add.html" class="menu-link">
                   <div data-i18n="Courses Add">Courses Add</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="all_Trade.html" class="menu-link">
                   <div data-i18n="Courses Details">Courses Details</div>
                 </a>
               </li>
@@ -171,12 +171,12 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="student_add.html" class="menu-link">
                   <div data-i18n="Student Addmission">Student Addmission</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="all_student.html" class="menu-link">
                   <div data-i18n="Student Details">Student Details</div>
                 </a>
               </li>
@@ -195,12 +195,12 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="attendance_add.html" class="menu-link">
                   <div data-i18n="Attendance Add">Attendance Add</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="attendance_details.html" class="menu-link">
                   <div data-i18n="Attendance Details">Attendance Details</div>
                 </a>
               </li>
@@ -233,12 +233,12 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="user-add.html" class="menu-link">
                   <div data-i18n="User Add">User Add</div>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="user_detail.html" class="menu-link">
                   <div data-i18n="User Details">User Details</div>
                 </a>
               </li>
@@ -766,32 +766,103 @@
               <ul class="nav nav-pills flex-column flex-md-row">
                 <li class="nav-item"><a class="nav-link" href="app-user-view-account.html"><i
                       class="bx bx-user me-1"></i>Profile</a></li>
-                <li class="nav-item"><a class="nav-link " href="app-user-view-security.html"><i
+                <li class="nav-item"><a class="nav-link active" href="javascript:void(0);"><i
                       class="bx bx-lock-alt me-1"></i>Attendance</a></li>
                 <li class="nav-item"><a class="nav-link" href="app-user-view-billing.html"><i
                       class="bx bx-detail me-1"></i>Fees</a></li>
-                <li class="nav-item"><a class="nav-link active" href="javascript:void(0);"><i
+                <li class="nav-item"><a class="nav-link" href="app-user-view-notifications.html"><i
                       class="bx bx-bell me-1"></i>Exam</a></li>
               </ul>
               <!--/ User Pills -->
             </div>
           </div>
 
+          <div class="container">
+            <div class="row">
+
+              <div class="col-lg-4 col-md-6 col-sm-6 mb-1">
+                <div class="card">
+                  <div class="card-body pt-3 p-0 px-3 m-0 ">
+                    <div class="d-flex justify-content-between">
+                      <!-- <img src="assets/img/pic/course1.jpeg" alt="" class="avatar avatar-xl me-2 rounded"> -->
+                      <p class="card-text pt-2 m-0 fw-bold">Presents</p>
+                      <div class="card-info">
+                        <div class="d-flex align-items-end ">
+                          <h4 class="card-titleme-2 bg-label-success p-2 rounded-circle">97</h4>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-6 mb-1">
+                <div class="card">
+                  <div class="card-body pt-3 p-0 px-3 m-0">
+                    <div class="d-flex justify-content-between">
+                      <!-- <img src="assets/img/pic/teacher1.webp" alt="" class="avatar avatar-xl me-2 rounded-circle"> -->
+                      <p class="card-text   pt-2 m- pt-2 m-00 fw-bold">Absents</p>
+                      <div class="card-info">
+                        <div class="d-flex align-items-end ">
+                          <h4 class="card-titleme-2 bg-label-danger p-2 rounded-circle">7</h4>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-6 mb-1">
+                <div class="card">
+                  <div class="card-body pt-3 p-0 px-3 m-0 ">
+                    <div class="d-flex justify-content-between">
+                      <!-- <img src="assets/img/pic/student1.png" alt="" class="avatar avatar-xl me-2 rounded-circle"> -->
+                      <p class="card-text mb-0 fw-b pt-2 m-0old pb-2">Leaves</p>
+                      <div class="card-info">
+                        <div class="d-flex align-items-end ">
+                          <h4 class="card-title me-2 bg-label-primary p-2 rounded-circle">3</h4>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="container-xxl flex-grow-1 container-p-y">
             <div class="card">
+             
+              <div class="row">
+                <div class="col-md-6 col-sm-12">
+                  <h5 class="card-header">Attendance</h5>
+                </div>
+                <div class="col-md-6 text-end col-sm-12">
+                  <Select class="mt-3 mb-4  select_all_std" id="monthBtn">
+                    <option value="">Month</option>
+                    <button type="submit">
+                      <option value="">January</option>
+                    </button>
+                    <button type="submit">
+                      <option value="">February</option>
+                    </button>
+                    <button type="submit">
+                      <option value="">March</option>
+                    </button>
+                  </Select>
 
-              <h5 class="card-header">Exam</h5>
+                  <button class="btn btn-primary mt-3 mb-4 btn_search">Search</button>
+                </div>
+
+              </div>
+
 
               <div class="table-responsive text-nowrap  table_higth">
                 <table class="table table-hover text-center">
                   <thead class="table_body table_body">
                     <tr>
                       <th>#</th>
-                      <th>Exam Name</th>
                       <th>Date</th>
                       <th>Day</th>
-                      <th>Total Marks</th>
-                      <th>Student Marks</th>
+                      <th>Attendance</th>
                       <!-- <th>Address</th>
                       <th>Region</th>
                       <th>Actions</th> -->
@@ -800,75 +871,75 @@
                   <tbody class="table-border-bottom-0">
                     <tr>
                       <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
+                      <td>12/3/2024</td>
                       <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
+                      <td> <span class="bg-label-primary py-1 px-2 rounded"> Leave </span></td>
                     </tr>
                     <tr>
                       <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
+                      <td>12/3/2024</td>
                       <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
+                      <td> <span class="bg-label-danger py-1 px-2 rounded"> Absent </span></td>
                     </tr>
                     <tr>
                       <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
+                      <td>12/3/2024</td>
                       <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
+                      <td> <span class="bg-label-success py-1 px-2 rounded"> Present </span></td>
                     </tr>
                     <tr>
                       <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
+                      <td>12/3/2024</td>
                       <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
+                      <td> <span class="bg-label-primary py-1 px-2 rounded"> Leave </span></td>
                     </tr>
                     <tr>
                       <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
+                      <td>12/3/2024</td>
                       <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
+                      <td> <span class="bg-label-danger py-1 px-2 rounded"> Absent </span></td>
                     </tr>
                     <tr>
                       <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
+                      <td>12/3/2024</td>
                       <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
+                      <td> <span class="bg-label-success py-1 px-2 rounded"> Present </span></td>
                     </tr>
                     <tr>
                       <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
+                      <td>12/3/2024</td>
                       <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
+                      <td> <span class="bg-label-primary py-1 px-2 rounded"> Leave </span></td>
                     </tr>
                     <tr>
                       <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
+                      <td>12/3/2024</td>
                       <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
+                      <td> <span class="bg-label-danger py-1 px-2 rounded"> Absent </span></td>
                     </tr>
                     <tr>
                       <td></i> <strong>1</strong></td>
-                      <td><span class=" me-1">Frist Assignment</span></td>
-                      <td><span class=" me-1">12/3/2024</span></td>
+                      <td>12/3/2024</td>
                       <td><span class=" me-1">Monday</span></td>
-                      <td><span class=" me-1">100</span></td>
-                      <td><span class=" me-1">75</span></td>
+                      <td> <span class="bg-label-success py-1 px-2 rounded"> Present </span></td>
+                    </tr>
+                    <tr>
+                      <td></i> <strong>1</strong></td>
+                      <td>12/3/2024</td>
+                      <td><span class=" me-1">Monday</span></td>
+                      <td> <span class="bg-label-primary py-1 px-2 rounded"> Leave </span></td>
+                    </tr>
+                    <tr>
+                      <td></i> <strong>1</strong></td>
+                      <td>12/3/2024</td>
+                      <td><span class=" me-1">Monday</span></td>
+                      <td> <span class="bg-label-danger py-1 px-2 rounded"> Absent </span></td>
+                    </tr>
+                    <tr>
+                      <td></i> <strong>1</strong></td>
+                      <td>12/3/2024</td>
+                      <td><span class=" me-1">Monday</span></td>
+                      <td> <span class="bg-label-success py-1 px-2 rounded"> Present </span></td>
                     </tr>
 
                   </tbody>
