--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
               </li>
               <li class="menu-item">
                 <a href="exam_result.html" class="menu-link">
-                  <div data-i18n="Exam Result">Exam Result</div>
+                  <div data-i18n="All Result">All Result</div>
                 </a>
               </li>
             </ul>
