--- a/index.html
+++ b/index.html
@@ -290,7 +290,12 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="add_fees.html" class="menu-link">
+                  <div data-i18n="Add Fees">Add Fees</div>
+                </a>
+              </li>
+              <li class="menu-item">
+                <a href="fees_detail.html" class="menu-link">
                   <div data-i18n="Fees Details">Fees Details</div>
                 </a>
               </li>
