--- a/fees_type.html
+++ b/fees_type.html
@@ -797,7 +797,7 @@
                         <div class="row">
                             <div class="col-lg-4">
                                 <div class="card mb-4">
-                                    <h3 class="card-header">Add Exam Group</h3>
+                                    <h3 class="card-header">Add Fees Type</h3>
                                     <!-- Account -->
 
                                     <hr class="my-0">
@@ -852,7 +852,7 @@
                             </div>
                             <div class="col-md-8 col-lg-8 col-xl-8 order-0 mb-4">
                                 <div class="card">
-                                    <h5 class="card-header">Exam Group List</h5>
+                                    <h5 class="card-header">Fees Type</h5>
                                     <div class="table-responsive text-nowrap  table_exam_higth">
                                         <table class="table table-hover">
                                             <thead class="table_body table_body">
