--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="fees_type.html" class="menu-link">
                   <div data-i18n="Fees Type">Fees Type</div>
                 </a>
               </li>
