--- a/index.html
+++ b/index.html
@@ -271,6 +271,11 @@
                 </a>
               </li>
               <li class="menu-item">
+                <a href="attendance_day.html" class="menu-link">
+                  <div data-i18n="Attendance Day">Attendance Day</div>
+                </a>
+              </li>
+              <li class="menu-item">
                 <a href="attendance_details.html" class="menu-link">
                   <div data-i18n="Attendance Details">Attendance Details</div>
                 </a>
